# media-asset-manager

./: .gitignore  CHANGELOG.md  README.md  TODO.md  generate_icon.py  index.html  package.json  pnpm-lock.yaml  vite.config 2.ts  write_icon.py
docs/: index.html
docs/architecture/: api-design.md  data-model.md  decision-records.md  sprint10-architecture.md  sprint11-architecture.md  system-architecture.md
docs/planning/: coding-standards.md  definition-of-done.md  git-workflow.md  implementation-plan-sprint10.md  implementation-plan.md  sprint-10-plan.md  sprint-11-plan.md  sprint-12-plan.md
docs/project/: goals-and-scope.md  project-charter.md  roadmap.md
docs/requirements/: functional-requirements-sprint10.md  functional-requirements.md  non-functional-requirements.md  traceability-matrix.md  user-stories-sprint10.md  user-stories.md
docs/site/: index.html
docs/testing/: smoke-test-v0.9.0.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/assets/: mod.rs
src-tauri/src/automark/: mod.rs
src-tauri/src/commands/: assets.rs  automark.rs  clip_export.rs  drives.rs  indexing.rs  markers.rs  mod.rs  settings.rs  tags.rs  transcription.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/drives/: manager 2.rs  manager.rs  mod.rs  platform.rs  watcher.rs
src-tauri/src/indexer/: clip_export.rs  engine.rs  hasher.rs  metadata.rs  mod.rs  thumbnails.rs
src-tauri/src/models/: asset.rs  drive.rs  mod.rs  tag.rs
src-tauri/src/transcription/: engine.rs  job.rs  mod.rs  models.rs
src/commands/: assets.ts  automark.ts  drives.ts  indexing.ts  markers.ts  settings.ts  tags.ts  transcription.ts
src/components/common/: Badge.tsx  Button.tsx  Dialog.tsx  SortDropdown.tsx  TagBadge.tsx  TagPicker.tsx  ToastContainer.tsx
src/components/detail/: AssetDetailView.tsx  ClipExportConfirm.tsx  MarkerPanel.tsx  TranscriptPanel.tsx  TranscriptionOptionsDialog.tsx  VideoPlayer.tsx  fetchmodels_patch.txt
src/components/drives/: DriveList.tsx  (+4 more)
src/stores/: driveStore 2.ts  indexingStore.ts  libraryStore 2.ts  libraryStore.ts  tagStore.ts  themeStore 2.ts  themeStore.ts  toastStore.ts  transcriptionStore.ts
src/types/: asset 2.ts  drive 2.ts  drive.ts  indexing.ts  tag.ts
src/utils/: formatters 2.ts
(+5 files in other folders)
