[package]
name = "media-asset-manager"
version = "0.1.0"
description = "A local-first desktop application for indexing, tagging, and searching media assets on removable drives."
authors = ["Brian Erdelyi"]
edition = "2021"

[lib]
name = "media_asset_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
