[package]
name = "media-asset-manager"
version = "0.1.0"
description = "A local-first desktop application for indexing, tagging, and searching media assets on removable drives."
authors = ["Brian Erdelyi"]
edition = "2021"

[lib]
name = "media_asset_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
log = "0.4"
dirs = "5"
notify = "6"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
